<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@mipmap/ic_menu_setting"
            android:title="@string/main_setting" />

        <item
            android:id="@+id/nav_hotkey"
            android:icon="@mipmap/ic_menu_hotkey"
            android:title="@string/main_hotkey" />

        <item
            android:id="@+id/nav_manual"
            android:icon="@mipmap/ic_manual"
            android:title="@string/main_manual" />

        <item
            android:id="@+id/nav_firmware"
            android:icon="@mipmap/ic_menu_firmware"
            android:title="@string/main_firmware_upgrade" />

        <item
            android:id="@+id/nav_information"
            android:icon="@mipmap/ic_menu_information"
            android:title="@string/main_infomation" />
    </group>
</menu>
