<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/activity_hotkey_ll_top"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/com_top_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/activity_hotkey_ll_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:src="@drawable/bt_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotkey_title"
            android:textColor="@color/fontwhite"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_hotkey_ll_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_below="@+id/top"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="25dp"
                android:text="@string/hotkey_comment"
                android:textColor="@color/fontwhite"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="42dp"
                android:text="@string/hotkey_function_introduction_title"
                android:textColor="@color/fontwhite"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:text="@string/hotkey_function_introduction_comment"
                android:textColor="@color/fontwhite"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="42dp"
                android:text="@string/hotkey_how_to_setup_title"
                android:textColor="@color/fontwhite"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="16dp"
                android:text="@string/hotkey_how_to_setup_comment"
                android:textColor="@color/fontwhite"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/activity_hotkey_tv_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="42dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/btn_path_hotkey_selector"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/hotkey_app_download"
                android:textColor="@color/fontwhite"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>