<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".activity.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/com_top_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/activity_information_ll_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:src="@drawable/bt_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infomation_title"
            android:textColor="@color/fontwhite"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="33dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_info"
            android:textColor="@color/colorWhite"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_version"
                android:textColor="@color/colorWhite"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/activity_information_tv_current_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_available"
                android:textColor="@color/colorWhite"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/activity_information_tv_comment_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/installed_latest_version"
            android:visibility="gone"
            android:textColor="@color/colorWhite"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/activity_information_tv_goto_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="42dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/btn_path_hotkey_selector"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/information_upgrade"
            android:textColor="@color/fontwhite"
            android:textSize="12dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>