<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <!-- 타이틀바 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/com_top_bar"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/activity_firmware_ll_back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:src="@drawable/bt_back" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firmware_title"
            android:textColor="@color/fontwhite"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_firmware_tv_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/firmware_comment_before_upgrade"
                    android:textColor="@color/fontwhite"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/activity_firmware_tv_select_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/btn_default_selector"
                    android:gravity="center"
                    android:text="@string/select_device"
                    android:textColor="@color/fontwhite"
                    android:textSize="18dp"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/connected_device"
                    android:textColor="@color/fontwhite"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_firmware_tv_selected_device"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginRight="30dp"
                    android:background="@drawable/ic_bar_gray"
                    android:gravity="left|center_vertical"
                    android:hint="@string/empty_selected_device"
                    android:paddingLeft="11dp"
                    android:textColor="@color/fontwhite"
                    android:textColorHint="@color/white"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/activity_firmware_tv_comment_below"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/can_not_verify_the_latest_version"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/activity_firmware_fl_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/activity_firmware_iv_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/bt_firmware_off" />

                <TextView
                    android:id="@+id/activity_firmware_tv_update_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dfu_service_update"
                    android:textStyle="bold"
                    android:textColor="@color/colorDFUUpdateText"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/activity_firmware_iv_update_gauge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="86dp"
                    android:src="@drawable/ugrade_gauge_0" />
            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>