<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="15dp"
    tools:context=".activity.SelectDeviceActivity">

    <RelativeLayout
        android:id="@+id/activity_select_device_ll_search"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_select_device_tv_dfu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:background="@drawable/main_button"
                android:gravity="center"
                android:text="@string/dfu"
                android:textColor="@color/fontwhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_select_device_tv_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_button"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginStart="2dp"
                android:text="@string/find_device"
                android:textColor="@color/fontwhite"
                android:textSize="18sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/activity_select_device_pb_search"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_select_device_tv_ment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_select_device_ll_search"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/please_select_a_device"
        android:textColor="@color/fontwhite"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/activity_select_device_lv_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_above="@+id/activity_select_device_ll_next"
        android:layout_below="@+id/activity_select_device_tv_ment"
        android:layout_marginTop="15dp"
        android:background="@drawable/main_button"
        android:dividerHeight="1dp" >
    </ListView>

    <RelativeLayout
        android:id="@+id/activity_select_device_ll_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_select_device_tv_next"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_button"
            android:gravity="center"
            android:text="@string/bluetooth_settings"
            android:textColor="@color/fontwhite"
            android:textSize="18sp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/activity_select_device_pb_progress"
        style="?android:attr/progressBarStyle"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/activity_select_device_tv_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/device_not_found"/>
</RelativeLayout>